test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync/generate-on-subresource-trigger/namespace-ready.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-generate-exec
status:
  phase: Active
