test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync/generate-on-subresource-trigger/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: zk-kafka-address
spec:
  rules:
    - name: k-kafka-address
      match:
        any:
          - resources:
              kinds:
                - "Pod/exec"
      generate:
        # generateExisting does not work for sub-resources
        generateExisting: false
        # synchronization does not work for sub-resources
        synchronize: false
        apiVersion: v1
        kind: ConfigMap
        name: zk-kafka-address
        namespace: "{{request.namespace}}"
        data:
          kind: ConfigMap
          metadata:
            labels:
              somekey: somevalue
          data:
            ZK_ADDRESS: "192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181"
            KAFKA_ADDRESS: "192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092"
