test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync/generate-on-subresource-trigger/01-cluster-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: cluster-policy
spec:
  timeouts: {}
  try:
  - apply:
      file: policy.yaml
  - apply:
      file: namespace.yaml
  - assert:
      file: policy-ready.yaml
  - assert:
      file: namespace-ready.yaml
