test/conformance/chainsaw/generate/clusterpolicy/standard/data/nosync/generate-on-subresource-trigger/99-cleanup.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: cleanup
spec:
  timeouts: {}
  try:
  - command:
      args:
      - delete
      - cpol
      - zk-kafka-address
      - --force
      - --wait=true
      - --ignore-not-found=true
      entrypoint: kubectl
  - command:
      args:
      - delete
      - pod
      - nginx
      - -n
      - test-generate-exec
      - --wait=true
      - --ignore-not-found=true
      entrypoint: kubectl
  - command:
      args:
      - delete
      - cm
      - zk-kafka-address
      - -n
      - test-generate-exec
      - --wait=true
      - --ignore-not-found=true
      entrypoint: kubectl
  - command:
      args:
      - delete
      - ns
      - test-generate-exec
      - --wait=true
      - --ignore-not-found=true
      entrypoint: kubectl
